# abparts

./: .env.test.example  .gitignore  .gitignore.example  .last_cleanup  AI_ASSISTANT_AVAILABLE_TO_ALL_USERS.md  AI_ASSISTANT_DEPLOYMENT_COMPLETE.md  AI_ASSISTANT_DEPLOYMENT_GUIDE.md  AI_ASSISTANT_DEV_CONNECTION_FIX.md  AI_ASSISTANT_DEV_ENVIRONMENT_READY.md  AI_ASSISTANT_ESCALATION_TRANSLATION_FIX.md  AI_ASSISTANT_INTERACTIVE_TROUBLESHOOTING_COMPLETE.md  AI_ASSISTANT_INTERACTIVE_TROUBLESHOOTING_IMPLEMENTATION.md  AI_ASSISTANT_INTERACTIVE_TROUBLESHOOTING_PLAN.md  AI_ASSISTANT_KNOWLEDGE_BASE_FIX.md  AI_ASSISTANT_KNOWLEDGE_BASE_STATUS.md  AI_ASSISTANT_MOBILE_UI_FIX.md  AI_ASSISTANT_PRODUCTION_DEPLOYMENT_READY.md  AI_ASSISTANT_PRODUCTION_DEPLOYMENT_SUMMARY.md  AI_ASSISTANT_PRODUCTION_URL_FIX.md  ALEMBIC_MIGRATION_BEST_PRACTICES.md  ALL_LANGUAGES_TRANSLATIONS_COMPLETE.md  APPLY_FIX_NOW.md  APPLY_TRANSLATIONS_NOW.md  APPLY_USER_SCOPED_CACHING_GUIDE.md  AUTO_TRANSLATE_ENDPOINT_FIX.md  AUTO_TRANSLATE_REQUEST_FORMAT_FIX.md  AUTO_TRANSLATE_TIMEOUT_FIX_FINAL.md  AUTO_TRANSLATION_IMPLEMENTATION_COMPLETE.md  BACKEND_STATUS.md  BACKUP_DATABASE_GUIDE.md  BUILD_FIX_COMPLETE.md  BUTTON_LAYOUT_VISUAL_GUIDE.md  CALCULATED_INVENTORY_IMPLEMENTATION.md  CHAT_SESSION_UX_FIXES_NEEDED.md  CHAT_UX_ISSUES_SUMMARY.md  CHEAT_SHEET.md  CHECKLIST_ITEMS_CACHING_FIX.md  CLARIFICATION_AND_LEARNING_FIX.md  CLARIFICATION_FIX_APPLIED.md  CLARIFICATION_LIST_FIX.md  (+772 more)
Docs/: FRONTEND_STATUS.md  (+1 more)
website-scraper-mcp/: README.md  install.bat  pyproject.toml
website-scraper-mcp/examples/: scrape_website.py
(+1100 files in other folders)
